# Graphics_Final

OpenGL_Project/: CMakeLists.txt  main  main.cpp
OpenGL_Project/main.dSYM/Contents/Resources/DWARF/: main
OpenGL_Project/shaders/: StandardShading.fragmentshader  StandardShading.vertexshader  fargment_shader.glsl  vertex_shader.glsl
OpenGL_Project/src/: glad.c  glad.h  objects.cpp  objects.h  shader.cpp  shader.h
